--- a/style.css
+++ b/style.css
@@ -1,2 +1,3 @@
 header {background-color: aqua;color: aliceblue;display: flex;justify-content: space-around;align-items: center;padding: 24px;}
 .cabecalho-imagem{width: 20%;}
+.cabecalho-lista-item{display: inline-block;margin:0  16px;font-size: 24px;}
